--- a/nostrdb-jni-java/pom.xml
+++ b/nostrdb-jni-java/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>xyz.tcheeric</groupId>
     <artifactId>nostrdb-jni</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
 
     <name>nostrdb-jni</name>
